feat: nginx location blocks and priority
- exact match
- preferencial prefix match
- regex match
- prefix match

--- a/create-virtual-host/nginx.conf
+++ b/create-virtual-host/nginx.conf
@@ -10,4 +10,48 @@ http {
 
     root /sites/demo
   }
+
+  # Config in order priority
+
+  # !important 
+  # 1- Exact Match (=)
+  location = /greet {
+    return 200 'Hello from NGINX "/greet" location.';
+    index index.html index.htm
+    try_files $uri index.html
+  }
+
+  # !important 
+  # 2- Preferencial Prefix Match (^~)
+  # location ^~ /greet {
+  #   return 200 'Hello from NGINX "/greet" location. Preferencial Prefix Match';
+  #   index index.html index.htm
+  #   try_files $uri index.html
+  # }
+
+  # !important 
+  # 3- Regex Match (~*) and Case Insensitive
+  # location ~* greet[0-9] {
+  #   return 200 'Hello from NGINX "/greet" location -REGEX MATCH!.';
+  #   index index.html index.htm
+  #   try_files $uri index.html
+  # }
+
+  # Regex Match (~)
+  # Case sensitive
+  # location ~ greet[0-9] {
+  #   return 200 'Hello from NGINX "/greet" location -EXACT MATCH.';
+  #   index index.html index.htm
+  #   try_files $uri index.html
+  # }
+
+  # !important 
+  # 4 - Prefix match
+  # location /greet {
+  #   return 200 'Hello from NGINX "/greet" location -PREFIX MATCH.';
+  #   index index.html index.htm
+  #   try_files $uri index.html
+  # }
+
+  
 }
